clusters/k3s-cluster/apps/actions-runner-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner-system
  labels:
    name: actions-runner-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
