clusters/k3s-cluster/apps/actions-runner-controller/runner-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-runners
  labels:
    name: arc-runners
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
