clusters/k3s-cluster/apps/actions-runner-controller/runner-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: arc-runners
spec:
  podSelector: {}
  policyTypes:
    - Ingress
